add reservation calc screen and overwrited seasonality when is by date